<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370.0dip"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_jindu"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10.0dip"
        android:text="@string/wait_position_data"
        android:textColor="#000000"
        android:textSize="18.0sp" />

    <com.janlent.sodexo.widget.MySeekBar
        android:id="@+id/seekBar1"
        android:layout_width="300dip"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="0dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10.0dip"
        android:text="@string/wait_enumBase_data"
        android:textColor="#000000"
        android:textSize="18.0sp" />

    <com.janlent.sodexo.widget.MySeekBar
        android:id="@+id/seekBar2"
        android:layout_width="300dip"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="0dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10.0dip"
        android:text="@string/wait_foodMenu_data"
        android:textColor="#000000"
        android:textSize="18.0sp" />

    <com.janlent.sodexo.widget.MySeekBar
        android:id="@+id/seekBar4"
        android:layout_width="300dip"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="0dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10.0dip"
        android:text="@string/wait_patient_data"
        android:textColor="#000000"
        android:textSize="18.0sp" />

    <com.janlent.sodexo.widget.MySeekBar
        android:id="@+id/seekBar7"
        android:layout_width="300dip"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="0dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10.0dip"
        android:text="@string/upjson"
        android:textColor="#000000"
        android:textSize="18.0sp" />

    <com.janlent.sodexo.widget.MySeekBar
        android:id="@+id/seekBar9"
        android:layout_width="300dip"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingBottom="0dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="0dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb" />

    <Button
        android:id="@+id/cancel_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10.0dip" />
"

</LinearLayout>