<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d0c9"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="8.0dip"
        android:background="@drawable/com_bg2"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/titi_icon" />

            <TextView
                android:id="@+id/confirmation_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:layout_toRightOf="@id/iv1"
                android:text="@string/confirmation_order"
                android:textColor="#0b1863"
                android:textSize="18.0sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/breakfast_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:textColor="#0b1863"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30.0dip"
                android:background="@drawable/sec_line" />
        </RelativeLayout>

        <include layout="@layout/patient_information" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/sec_line2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1"
                android:text="@string/order_food_name_title"
                android:textColor="#000000"
                android:textSize="25.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:text="@string/send_food_time_title"
                android:textColor="#000000"
                android:textSize="25.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1"
                android:text="@string/order_food_nums_title"
                android:textColor="#000000"
                android:textSize="25.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1"
                android:text="@string/total_price_title"
                android:textColor="#000000"
                android:textSize="25.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1"
                android:text="@string/pay_mode_title"
                android:textColor="#000000"
                android:textSize="25.0sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip" >

            <ListView
                android:id="@+id/selected_foods_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="130.0dip"
                android:cacheColorHint="#00000000"
                android:divider="@drawable/sec_line2" />

            <TextView
                android:id="@+id/noorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/noorder"
                android:textColor="#000000"
                android:textSize="30.0sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loading_progress3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/confirm_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20.0dip"
                android:background="@drawable/confirmation_btn_bg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/confirm_order"
                android:layout_alignParentRight="true"
                android:layout_margin="20.0dip"
                android:orientation="horizontal"
                android:paddingRight="20.0dip" >

                <TextView
                    android:id="@+id/sumcash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="25.0sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>